correction affichage hauteur version mobile

--- a/main.scss
+++ b/main.scss
@@ -47,7 +47,7 @@ main {
     flex-direction: column;
     align-items: center;
     max-width: 800px;
-    
+    min-height: 100svh;
     padding: 40px 30px 20px 30px;
 }
 
